--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
-version: "3.7"
+version: "3.3"
 
 services:
   server:
+    env_file:
+      - ./backend/.env
     build:
       context: ./backend
       dockerfile: Dockerfile
@@ -9,8 +11,6 @@ services:
       - ./backend/:/backend/
       - /var/run/docker.sock:/var/run/docker.sock
     command: uvicorn app.api.server:app --reload --workers 1 --host 0.0.0.0 --port 8000
-    # env-file:
-    #   - ./backend/.env
     ports:
       - 8000:8000
     depends_on:
@@ -20,8 +20,8 @@ services:
     image: postgres:12.1-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data/
-    # env_file:
-    #   - ./backend/.env
+    env_file:
+      - ./backend/.env
     ports:
       - 5432:5432
 
