--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,10 +3,13 @@ fastapi==0.55.1
 uvicorn==0.11.3
 pydantic==1.4
 email-validator==1.1.1
+python-multipart==0.0.5
+
 # db
 databases[postgresql]==0.3.1
 SQLAlchemy==1.3.16
 alembic==1.4.2
+
 # auth
 pyjwt==1.7.1
 passlib[bcrypt]==1.7.2
